[gd_scene load_steps=6 format=3 uid="uid://diewwg2q0c40e"]

[ext_resource type="Theme" uid="uid://d27dsxdcf0ldf" path="res://Card_theme.tres" id="1_4k5wn"]
[ext_resource type="Script" uid="uid://csxda05f6segx" path="res://Scenes/dealers_cut.gd" id="1_a51xl"]
[ext_resource type="Texture2D" uid="uid://lnrh34eex23h" path="res://Assets/PNG-cards-1.3/2_of_hearts.png" id="2_a51xl"]
[ext_resource type="Theme" uid="uid://bs82185dtcax6" path="res://Assets/Button theme.tres" id="4_32nyf"]
[ext_resource type="Theme" uid="uid://twfci1goorii" path="res://Assets/Text theme.tres" id="5_32nyf"]

[node name="DealersCut" type="Button" groups=["cards"]]
offset_right = 100.0
offset_bottom = 130.0
theme = ExtResource("1_4k5wn")
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
script = ExtResource("1_a51xl")

[node name="Card_texture" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 130.0
texture = ExtResource("2_a51xl")
expand_mode = 1

[node name="Discription_Box" type="Panel" parent="."]
z_index = 3
layout_mode = 0
offset_left = 104.0
offset_right = 228.0
offset_bottom = 131.0

[node name="Name" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_top = 4.0
offset_right = 124.0
offset_bottom = 27.0
theme = ExtResource("5_32nyf")
theme_override_colors/font_color = Color(0.831373, 0.686275, 0.215686, 1)
text = "DEALERS CUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Discription" type="Label" parent="Discription_Box"]
layout_mode = 0
offset_top = 21.0
offset_right = 124.0
offset_bottom = 131.0
theme = ExtResource("5_32nyf")
theme_override_font_sizes/font_size = 14
text = "Adds +2 to your lowest die face"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Buy_btn" type="Button" parent="Discription_Box"]
layout_mode = 0
offset_left = -94.0
offset_top = 96.0
offset_right = -15.0
offset_bottom = 128.0
theme = ExtResource("4_32nyf")
text = "BUY"

[node name="sell_btn" type="Button" parent="Discription_Box"]
visible = false
offset_left = -97.0
offset_top = 96.0
offset_right = -15.0
offset_bottom = 128.0
scale = Vector2(1.00552, 0.98905)
theme = ExtResource("4_32nyf")
text = "SELL
"

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = 134.0
offset_right = 101.0
offset_bottom = 174.0

[node name="Effect" type="Label" parent="Panel"]
z_index = 4
layout_mode = 0
offset_right = 102.0
offset_bottom = 40.0
scale = Vector2(1, 1.00313)
theme = ExtResource("5_32nyf")
theme_override_colors/font_color = Color(0.278076, 0.751876, 1, 1)
text = "+1 to _"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="Discription_Box/Buy_btn" to="." method="_on_buy_btn_pressed"]
[connection signal="pressed" from="Discription_Box/sell_btn" to="." method="_on_sell_btn_pressed"]
